Organize and refactor folders and files
Reorganization of the ChatUPM project to group code by
functionality: break down the functionalities into smaller,
manageable modules and into group related folders.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UPM Chatbot</title>
-    <link rel="stylesheet" href="../static/style.css">
-    <link rel="icon" type="image/x-icon" href="../static/favicon.ico">
+    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="icon" type="image/x-icon" href="../static/media/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 </head>
 
 <body>
     <header class = "main-menu">
         <div class="image-container">
-            <a href="."><img class="logo-chatUPM" src="./static/chatupm.png" alt="ChatUPM logo"></a>
+            <a href="."><img class="logo-chatUPM" src="./static/media/chatupm.png" alt="ChatUPM logo"></a>
             <div class="space24"></div>
-            <a href="https://www.upm.es" target="_blank"><img class="logo-UPM" src="./static/UPM.png" alt="UPM logo"></a>
+            <a href="https://www.upm.es" target="_blank"><img class="logo-UPM" src="./static/media/UPM.png" alt="UPM logo"></a>
         </div> 
         <div class="header-buttons">
             {% if auth_status %}
@@ -33,7 +33,7 @@
         <p>Todo sobre la normativa de alumnos de la </br> Universidad Politécnica de Madrid.</p>
     </div>
     <div class="space-16"></div>
-    <img class="sol" src="../static/ChatUPMIcon-Positive.png" alt="logo svg">
+    <img class="sol" src="../static/media/ChatUPMIcon-Positive.png" alt="logo svg">
     <div class="space-16"></div>
     <div class="intro">
         <p> Habla con nuestro chatbot para resolver todas tus dudas y consultas sobre la normativa legal de alumnos de la Universidad Politécnica de Madrid.
@@ -51,7 +51,7 @@
                 ¡Protege tu cuenta, mantén tu privacidad!</p>
             </div>
             <div class="image-1">
-                <img class="login" src="../static/login.svg" alt="login svg">
+                <img class="login" src="../static/media/login.svg" alt="login svg">
             </div>
         </div>
         <div class="box-2">
@@ -64,7 +64,7 @@
             </div>
             <div class="space-16"></div>
             <div class="image-2">
-                <img class="question" src="../static/question.svg" alt="question svg">
+                <img class="question" src="../static/media/question.svg" alt="question svg">
             </div>
         </div>
         <div class="box-3">
@@ -76,7 +76,7 @@
             </div>
             <div class="space-16"></div>
             <div class="image-3">
-                <img class="data" src="../static/data.svg" alt="data svg">
+                <img class="data" src="../static/media/data.svg" alt="data svg">
             </div>
         </div>
     </div>
@@ -94,13 +94,13 @@
         <div class="space-16"></div>
     </div>
     <div class="reminder-image">
-        <img class="startup" src="../static/startup-cropped.svg" alt="forward svg">
+        <img class="startup" src="../static/media/startup-cropped.svg" alt="forward svg">
     </div>
 </div>
 <div class="space88"></div>
 
 <footer>
-    <img class="logo-footer" src="./static/chatupm.png" alt="ChatUPM logo">
+    <img class="logo-footer" src="./static/media/chatupm.png" alt="ChatUPM logo">
 </footer>
 <div class="texto-footer">
     <p>Copyright © 2023 Paula</p>
