--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Login Page</title>
-    <link rel="icon" type="image/x-icon" href="../static/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="../static/media/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-    <link rel="stylesheet" href="../static/style_signup.css">
+    <link rel="stylesheet" href="../static/css/style_signup.css">
   </head>
   <body>
     <div class="signup-container">
       <div class="logo-container">
-        <img class="logo-chatupm-ps" src="../static/chatupm-logo-PS.png" alt="logo chatupm">
+        <img class="logo-chatupm-ps" src="../static/media/chatupm-logo-PS.png" alt="logo chatupm">
       </div>
       <div class="space-32"></div>
     <div class="formulario">
