--- a/app/static/css/style_chat.css
+++ b/app/static/css/style_chat.css
@@ -1,257 +1,157 @@
+/* Color Variables */
+:root {
+    --primary-400: #4767CD;
+    --primary-700: #141D39;
+    --primary-600: #142E81;
+    --primary-500: #2141A6;
+    --primary-300: #6886E6;
+    --primary-200: #B6CCFD;
+    --primary-100: #FCFDFF;
+  
+    --neutral-40: #2E3340;
+    --neutral-100: #4C515E;
+    --neutral-80: #6A6F7C;
+    --neutral-60: #9297A4;
+    --neutral-20: #B7BBC5;
+    --neutral-10: #E3E5EA;
+    --neutral-05: #FFFFFF;
+  
+    --secondary-400: #FFAA50;
+    --secondary-300: #FFBA71;
+    --secondary-200: #FDD4A8;
+    --secondary-100: #FFE2C4;
+    --secondary-50: #FFF6EC;
+  }
 
-/* Styling the main container */
+body {
+    font-family: Montserrat;
+    margin: 0;
+    padding: 0;
+    background-color: var(--primary-100);
+  } 
+
 .container {
-    width: 80%;
+    width: 400px;
     margin: auto;
-    margin-top: 2rem;
-    letter-spacing: 0.5px;
-    height: 80%;
+    padding: 20px;
+    background-color: var(--neutral-05);
+    border-radius: 5px;
+    font-family: Montserrat;
+    box-shadow: 0px 0px 32px 0px #2E33401A;
 }
 
-img {
-    width: 50px;
-    vertical-align: middle;
+.message {
+    font-family: Montserrat;
+}
+.user-message {
+    margin-top: 20px;
+    font-family: Montserrat;
+    font-size: 16px;
+    line-height: 26px;
+    margin-bottom: 20px;
+}
+
+
+.bot-message {
+    font-family: Montserrat;
+    font-size: 16px;
+    line-height: 26px;
+}
+
+#chat-form {
+    margin: 30px;
+    text-align: center;
+    font-family: Montserrat;
+    justify-content: center;
+    margin-left:auto;
+    margin-right:auto;
+    position: relative;
+}
+
+#user-message {
+    width: 40%;
+    text-align:center;
+    box-sizing: border-box;
+    font-family: Montserrat;
+    font-size: 16px;
+    line-height: 26px;
+    color: var(--neutral-40);
+    margin-bottom: 10px;
+    padding: 8px 32px 8px 32px;
+    border: none;
+    margin-left: auto;
+    margin-right: 20px;
+    box-shadow: 0px 1px 0px 0px var(--neutral-20);
+}
+
+#send {
+    font-family: Montserrat;
+    font-size: 16px;
+    line-height: 26px;
+    font-weight: 700;
+    color: white;
+    text-decoration: none;
     border-style: none;
-    border-radius: 100%;
-}
-/* Styling the msg-header container */
-.msg-header {
-    border: 1px solid #ccc;
-    width: 100%;
-    height: 10%;
-    border-bottom: none;
-    display: inline-block;
-    background-color: #efefef;
-    margin: 0;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-}
-/* Styling the profile picture */
-.msgimg {
-    margin-left: 2%;
-    float: left;
+    border-radius: 100px;
+    background-color: var(--primary-400);
+    padding: 14px 40px 14px 40px;
+    transition: 0.2s ease-in-out;
 }
 
-.container1 {
-    width: 270px;
-    height: auto; 
-    float: left;
-    margin: 0;
-}
-
-/* styling user-name */
-.active {
-    width: 150px;
-    float: left;
-    color: black;
-    font-weight: bold;
-    margin: 0 0 0 5px;
-    height: 10%;
- 
-}
-/* Styling the inbox */
-.chat-page {
-    padding: 0 0 50px 0;
-}
-
-.msg-inbox {
-    border: 1px solid #ccc;
-    overflow: hidden;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-}
-
-
-.chats {
-    padding: 30px 15px 0 25px;
-}
-
-.msg-page {
-    max-height: 500px;
-    overflow-y: auto;
-}
-
-/* Styling the msg-bottom container */
- .msg-bottom {
-        border-top: 1px solid #ccc;
-        position: relative;
-        height: 11%;
-        background-color: rgb(239 239 239);
+#send:hover{
+    background-color: var(--primary-200);
+    text-decoration: none;
     }
-/* Styling the input field */
-    .input-group {
-        float: right;
-        margin-top: 13px;
-        margin-right: 20px;
-        outline: none !important;
-        border-radius: 20px;
-        width: 61% !important;
-        background-color: #fff;
-        position: relative;
-        display: flex;
-        flex-wrap: wrap;
-        align-items: stretch;
-    }
+
+#message-container {
+    text-align:center;
+    width: 60%;
+    margin-top: 30px;
+    position: relative;
+    max-height: 400px; /* Set a maximum height for the message container */
+    overflow-y: auto; 
     
-    .input-group>.form-control {
-        position: relative;
-        flex: 1 1 auto;
-        width: 1%;
-        margin-bottom: 0;
-    }
-    
-    .form-control {
-        border: none !important;
-        border-radius: 20px !important;
-        display: block;
-        height: calc(2.25rem + 2px);
-        padding: 0.375rem 0.75rem;
-        font-size: 1rem;
-        line-height: 1.5;
-        color: #495057;
-        background-color: #fff;
-        background-clip: padding-box;
-        transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
-    }
-    
-    .input-group-text {
-        background: transparent !important;
-        border: none !important;
-        display: flex;
-        align-items: center;
-        padding: 0.375rem 0.75rem;
-        margin-bottom: 0;
-        font-size: 1.5rem;
-        font-weight: b;
-        line-height: 1.5;
-        color: #495057;
-        text-align: center;
-        white-space: nowrap;
-        background-color: #e9ecef;
-        border: 1px solid #ced4da;
-        border-radius: 0.25rem;
-        font-weight: bold !important;
-        cursor: pointer;
-    }
-    
-    input:focus {
-        outline: none;
-        border: none !important;
-        box-shadow: none !important;
-    }
-    
-    .send-icon {
-        font-weight: bold !important;
     }
 
-/* Styling the avatar  */
-received-chats-img {
-    display: inline-block;
-    width: 50px;
-    float: left;
+/* Spaces */
+
+.space-8{
+    height: 8px;
+    width: 8px;
 }
 
-.received-msg {
-    display: inline-block;
-    padding: 0 0 0 10px;
-    vertical-align: top;
-    width: 92%;
-}
-.received-msg-inbox {
-    width: 57%;
+.space-16{
+    height: 16px;
+    width: 16px;
 }
 
-.received-msg-inbox p {
-    background: #efefef none repeat scroll 0 0;
-    border-radius: 10px;
-    color: #646464;
-    font-size: 14px;
-    margin-left: 1rem;
-    padding: 1rem;
-    width: 100%;
-    box-shadow: rgb(0 0 0 / 25%) 0px 5px 5px 2px;
-}
-    p {
-    overflow-wrap: break-word;
+.space-32{
+    height: 32px;
+    width: 32px;
 }
 
-/* Styling the msg-sent time  */
-.time {
-    color: #777;
-    display: block;
-    font-size: 12px;
-    margin: 8px 0 0;
-}
-.outgoing-chats {
-    overflow: hidden;
-    margin: 26px 20px;
+.space-64{
+    height: 32px;
+    width: 32px;
 }
 
-.outgoing-chats-msg p {
-    background-color: #3a12ff;
-    background-image: linear-gradient(45deg, #ee087f 0%, #DD2A7B 25%, #9858ac 50%, #8134AF 75%, #515BD4 100%);
-    color: #fff;
-    border-radius: 10px;
-    font-size: 14px;
-    color: #fff;
-    padding: 5px 10px 5px 12px;
-    width: 100%;
-    padding: 1rem;
-    box-shadow: rgb(0 0 0 / 25%) 0px 2px 5px 2px;
-}
-.outgoing-chats-msg {
-        float: right;
-        width: 46%;
-    }
-
-/* Styling the avatar */
-.outgoing-chats-img {
-    display: inline-block;
-    width: 50px;
-    float: right;
-    margin-right: 1rem;
-}
-@media only screen and (max-device-width: 850px) {
-    *,
-    .time {
-        font-size: 28px;
-    }
-    img {
-        width: 65px;
-    }
-    .msg-header {
-        height: 5%;
-    }
-    .msg-page {
-        max-height: none;
-    }
-    .received-msg-inbox p {
-        font-size: 28px;
-    }
-    .outgoing-chats-msg p {
-        font-size: 28px;
-    }
+.logo-container{
+    display: flex;
+    justify-content: center;
 }
 
-@media only screen and (max-device-width: 450px) {
-    *,
-    .time {
-        font-size: 28px;
-    }
-    img {
-        width: 65px;
-    }
-    .msg-header {
-        height: 5%;
-    }
-    .msg-page {
-        max-height: none;
-    }
-    .received-msg-inbox p {
-        font-size: 28px;
-    }
-    .outgoing-chats-msg p {
-        font-size: 28px;
-    }
+.logo-chatupm-ps{
+    height: 72px;
+    width: auto;
 }
 
+.chatbot-container {
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.logo-container {
+    text-align: center;
+}
