--- a/app/templates/chatbot.html
+++ b/app/templates/chatbot.html
@@ -1,17 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>UPM Chatbot</title>
-        <link rel="stylesheet" href="../static/css/style_chat.css">
-        <link rel="icon" type="image/x-icon" href="../static/media/favicon.ico">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-    </head>
-    
-  <body>
-    <h1>Chatbot in progress :]</h1>
-  </body>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>UPM Chatbot</title>
+  <link rel="stylesheet" href="../static/css/style_chat.css">
+  <link rel="icon" type="image/x-icon" href="../static/media/favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('#chat-form').submit(function(e) {
+                e.preventDefault();
+                var userMessage = $('#user-message').val();
+                
+
+                $.ajax({
+                    type: 'POST',
+                    url: '/chatbot',
+                    data: { msg: userMessage },
+                    success: function(response) {
+                        var botText = response.botText;
+                        var user = response.user;
+                        displayUserMessage(user, userMessage);
+                        displayBotMessage(botText);
+                        $('#user-message').val(''); // Clear input field
+                        $('#user-message').focus();
+                    }
+                });
+            });
+
+            function displayUserMessage(user,userMessage) {
+                var messageContainer = $('#message-container');
+                var userMessage = $('<div class="message user-message"><strong>'+ user+':</strong> ' + userMessage + '</div>');
+                messageContainer.append(userMessage);
+                messageContainer.scrollTop(messageContainer[0].scrollHeight);
+            }
+
+            function displayBotMessage(botText) {
+                var messageContainer = $('#message-container');
+                var botMessage = $('<div class="message bot-message"><strong>ChatUPM:</strong> ' + botText + '</div>');
+                messageContainer.append(botMessage);
+            }
+
+            $('#user-message').focus();
+        });
+    </script>
+</head>
+<body>
+  <div class="space-64"></div>
+  <div class="space-64"></div>
+  <div class="chatbot-container">
+    <div class="logo-container">
+      <img class="logo-chatupm-ps" src="../static/media/chatupm-logo-PS.png" alt="logo chatupm">
+    </div>
+    <div class="space-16"></div>
+    <div class="container" id="message-container">
+        <div class="message bot-message"><strong>ChatUPM:</strong> ¡Bienvenid@ al chat de la UPM! 🎓 ¿Tienes alguna duda sobre la normativa de alumnos?</div>
+        <!-- Messages will be dynamically added here -->
+    </div>
+    <div class="space-8"></div>
+    <div class = "boxes">
+    <form id="chat-form">
+        <input type="text" id="user-message" placeholder="Escribe aquí tu duda..." required>
+        <input type="submit"id = "send" value="Enviar">
+    </form>
+    <div class="space-64"></div>
+    <div class="space-64"></div>
+  </div>
+  </div>
+</body>
 </html>
-
-
