--- a/app/templates/chatbot.html
+++ b/app/templates/chatbot.html
@@ -52,7 +52,7 @@
   <div class="space-64"></div>
   <div class="chatbot-container">
     <div class="logo-container">
-      <img class="logo-chatupm-ps" src="../static/media/chatupm-logo-PS.png" alt="logo chatupm">
+      <a href="."><img class="logo-chatupm-ps" src="../static/media/chatupm-logo-PS.png" alt="logo chatupm"></a>
     </div>
     <div class="space-16"></div>
     <div class="container" id="message-container">
@@ -60,14 +60,12 @@
         <!-- Messages will be dynamically added here -->
     </div>
     <div class="space-8"></div>
-    <div class = "boxes">
     <form id="chat-form">
-        <input type="text" id="user-message" placeholder="Escribe aquí tu duda..." required>
+        <p style="text-align: center; width: 42%"><strong>Escribe aquí tu duda:</strong></p>
+        <input type="text" id="user-message" placeholder="¿Cuántos créditos necesito para que no me echen de la UPM?" required>
         <input type="submit"id = "send" value="Enviar">
     </form>
     <div class="space-64"></div>
-    <div class="space-64"></div>
-  </div>
   </div>
 </body>
 </html>
