--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -10,7 +10,7 @@
   <body>
     <div class="signup-container">
       <div class="logo-container">
-        <img class="logo-chatupm-ps" src="../static/media/chatupm-logo-PS.png" alt="logo chatupm">
+        <a href="."><img class="logo-chatupm-ps" src="../static/media/chatupm-logo-PS.png" alt="logo chatupm"></a>
       </div>
       <div class="space-32"></div>
     <div class="formulario">
